--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 					<a href="#"><img src="img/Bouncy.png" alt="logo"></a>
 				</div>
 				<button id="bo-header-show-menu">
-					<span class="icon-angle-down"></span>
+					<span class="icon-bars"></span>
 				</button>
-				<ul class="bo-header__nav animation col-offset-1 col-4">
+				<ul class="bo-header__nav animation">
 					<li><a href="#hello">Hello</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#team">Team</a></li>
@@ -43,7 +43,7 @@
 				</div>
 		 	</div>
 		 	<div class="bo-hello__link">	
-		 		<a href="#portfolio"><span class="icon-angle-down"></span></a>
+		 		<a href="#portfolio"><span class="icon-chevron-down"></span></a>
 		 	</div>
 		</div> <!--container -->
 	</section><!-- bo-hello -->
@@ -211,7 +211,7 @@
 					<span class="logoblack"><img src="img/Bouncyblack.png" alt="Bouncyblack"/></span>
 					<p>Copyright 2015. All rights Reserved</p>
 					<div class="social-icon">
-						<a href="#"><span class="icon-facebook2"></span></a>
+						<a href="#"><span class="icon-facebook"></span></a>
 						<a href="#"><span class="icon-twitter"></span></a>
 						<a href="#"><span class="icon-linkedin2"></span></a>
 						<a href="#"><span class="icon-instagram"></span></a>
