--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				<button id="bo-header-show-menu">
 					<span class="icon-bars"></span>
 				</button>
-				<ul class="bo-header__nav animation">
+				<ul class="bo-header__nav">
 					<li><a href="#hello">Hello</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
 					<li><a href="#team">Team</a></li>
